--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.848.0",
+    "@aws-sdk/client-s3": "^3.940.0",
     "@aws-sdk/lib-dynamodb": "^3.850.0",
     "next": "15.4.3",
     "react": "19.1.0",
