feat: add Netsuite scripts to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+Scripts Netsuite/IMR - ENVIO NOTIFICACIONES - ST.js
+Scripts Netsuite/IMR - PORTAL FACTURACION - ST.js
