--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.848.0",
+    "@aws-sdk/client-s3": "^3.998.0",
     "@aws-sdk/lib-dynamodb": "^3.850.0",
     "@hookform/resolvers": "^5.2.2",
     "next": "15.4.3",
